Ordenar monedas por su valor de menor a mayor